--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-/.vscode
-/LevenshteinDistance.exe
+# C++ build files
+*.out
+*.o
+*.exe
+
+# Debug / log files
+*.log
+*.tmp
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# OS-specific
+.DS_Store
+Thumbs.db
